src/objects/AIA_Document__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>File_Net_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Date_Time__c</fullName>
        <label>Approval Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approvals</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Billing_Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Billing Tech</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Customer_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Customer Support</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Implementation_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Implementation Team</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Par_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Par Plan</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_QA_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - QA Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Sales_Service_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Sales Service Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Settlements_Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Settlements Tech</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Documents6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_name__c</fullName>
        <label>Approver name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Design</label>
        <referenceTo>AIA_Benefit_Design__c</referenceTo>
        <relationshipLabel>AIA Documents</relationshipLabel>
        <relationshipName>AIA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipName>File_Net_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>AIA Documents</relationshipLabel>
        <relationshipName>AIA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Approval_Date__c</fullName>
        <label>Document Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Format__c</fullName>
        <label>Document Format</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIA Account Issue Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Design Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Request Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Associate Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Associate Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cede Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Census Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Screener Questionnaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Structure Approval Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Structure Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marked Up Benefit Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRF Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRF Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRF Workplan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Id Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Data Analyst Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Data Analyst Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsigned Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mock ID Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_View__c</fullName>
        <formula>HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos; + Attachment_ID__c, &apos;View&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Document_Approval_Stage__c</fullName>
        <label>Group Structure Document Approval Stage</label>
        <picklist>
            <picklistValues>
                <fullName>In Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Step 6-New Business - Account Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 7-Existing Business - Sales / Service Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 7-Approved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipLabel>AIA Documents</relationshipLabel>
        <relationshipName>AIA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mock_ID_Par_Plan_Review_reqd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mock ID Par Plan Review reqd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>File_Net_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Request Form</label>
        <referenceTo>PRF__c</referenceTo>
        <relationshipName>File_Net_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Products</label>
        <referenceTo>Proposed_Products__c</referenceTo>
        <relationshipName>File_Net_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_User_email__c</fullName>
        <label>Sales User email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workplan Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Request Form</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workplan_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplan Assignment</label>
        <referenceTo>AIA_Workplan_Assignment__c</referenceTo>
        <relationshipName>File_Net_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AIA Document</label>
    <listViews>
        <fullName>AIA_Quality_Audit_AIA_Document</fullName>
        <filterScope>Queue</filterScope>
        <label>AIA Quality Audit</label>
        <queue>AIA_Quality_Audit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FD-{000000}</displayFormat>
        <label>AIA Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AIA Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>